RESOLVED FIXED115559
REGRESSION (r145042): Downloading a file sometimes results in could not create a sandbox extension Console message and file stays as a .download file
https://bugs.webkit.org/show_bug.cgi?id=115559
Summary REGRESSION (r145042): Downloading a file sometimes results in could not creat...
Alexey Proskuryakov
Reported 2013-05-03 11:32:00 PDT
This is a bug that existed before it was uncovered by r145042. fileSystemRepresentation returns a CString that has a buffer that's longer than its length, and then resolveSymlinksInPath treats it as if buffer size was the length. <rdar://problem/13785101>
Attachments
proposed fix (2.11 KB, patch)
2013-05-03 12:41 PDT, Alexey Proskuryakov
sam: review+
Alexey Proskuryakov
Comment 1 2013-05-03 11:34:58 PDT
This is much like bug 55412. I'd like to see if these CString issues can be fixed for good...
Alexey Proskuryakov
Comment 2 2013-05-03 12:41:33 PDT
Created attachment 200463 [details] proposed fix
Alexey Proskuryakov
Comment 3 2013-05-03 13:29:11 PDT
Note You need to log in before you can comment on or make changes to this bug.